--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ share/python-wheels/
 *.egg
 MANIFEST
 .pyc
-ui/pages/__pycache__
+app/ui/pages/__pycache__/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
